Thu Feb  3 10:38:00 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/freebcp.c vms/descrip_mms.template vms/getpass.c:
	- applied patch from Craig A. Berry for bcp and VMS

Thu Feb  3 10:03:57 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds_ssl.html doc/userguide.sgml:
	- update some docs

Thu Feb  3 09:24:25 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c:
	- applied patch from Craig A. Berry, fix an overflow using utf8

Wed Feb  2 20:08:08 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* freetds.conf include/tds.h src/odbc/connectparams.c:
	* src/odbc/odbc.c src/tds/config.c src/tds/login.c:
	* src/tds/mem.c:
	- cleanup of old configurations parameters about NT domain

Tue Feb  1 13:59:52 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/dblib/dblib.c:
	* src/tds/mem.c src/tds/token.c:
	- fix int overflow if compute BY clause have more than 255 columns
	* src/ctlib/blk.c: small fixes
	* src/dblib/bcp.c: cleanup

Mon Jan 31 14:06:33 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/utf8_3.c: small fix
	* src/tds/net.c: use always no-blocking socket

Mon Jan 31 10:54:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/apps/tsql.c src/ctlib/ct.c:
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/rpc.c:
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/sql2tds.c:
	* src/tds/data.c src/tds/mem.c src/tds/query.c:
	* src/tds/tds_checks.c src/tds/token.c:
	- use column_cur_size to store nullability flag

Sun Jan 30 12:46:17 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: updated
	* doc/api_status.txt: add view source

Sun Jan 30 11:09:18 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO: updates
	* src/tds/net.c: small improve and comments

Sat Jan 29 09:11:11 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h: just comment
