@@ -1,3 +1,7 @@
+Fri Feb  4 15:02:17 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* TODO: updated
+	* src/tds/login.c: do not send NT login using TDS < 7.0
+
 Thu Feb  3 10:38:00 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* src/apps/freebcp.c vms/descrip_mms.template vms/getpass.c:
 	- applied patch from Craig A. Berry for bcp and VMS
